[#58950] Remove all references to 'OS2datascanner' in the UI

--- a/src/os2datascanner/projects/admin/adminapp/templates/components/scanner/scanner_cleanup_response.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/scanner/scanner_cleanup_response.html
@@ -19,7 +19,7 @@
         <h1>{% trans "Scannerjob is running!" %}</h1>
         <span class="icon">{% include "components/svg-icons/scan_error.svg" %}</span>
         <div>
-          {% trans "OS2datascanner was not able to delete the results from the stale accounts, since the scannerjob is currently running. Try again later." %}
+          {% trans "OSdatascanner was not able to delete the results from the stale accounts, since the scannerjob is currently running. Try again later." %}
         {% else %}
           <h1>{% trans "Stale accounts cleaned!" %}</h1>
           <span class="icon">{% include "components/svg-icons/scan_succes.svg" %}</span>
