--- a/src/os2datascanner/projects/admin/adminapp/templates/components/scanner/scanner_cleanup_stale_accounts.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/scanner/scanner_cleanup_stale_accounts.html
@@ -18,7 +18,7 @@
     <div class="cleanup-content">
       <h1>{% trans "Clean up stale accounts" %}</h1>
       <p>
-        {% trans "OS2datascanner has registered, that some users, which were previously scanned with this scanner job, are no longer covered. These accounts will no longer be scanned by the scanner job." %}
+        {% trans "OSdatascanner has registered, that some users, which were previously scanned with this scanner job, are no longer covered. These accounts will no longer be scanned by the scanner job." %}
       </p>
       <p>{% trans "Delete the report results for the following users:" %}</p>
       <form id="cleanup-accounts-form" name="cleanup-accounts-form">
