--- a/src/os2datascanner/projects/admin/adminapp/templates/components/scanner/scanner_no_client_credentials.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/scanner/scanner_no_client_credentials.html
@@ -15,7 +15,7 @@
       </div>
 
       <p>
-        {% trans "To use this data source, credentials for SBSYS must be set up in OS2datascanner. These credentials are not currently in the system." %}
+        {% trans "To use this data source, credentials for SBSYS must be set up in OSdatascanner. These credentials are not currently in the system." %}
       </p>
     </div>
   </div>
