--- a/src/os2datascanner/projects/admin/grants/templates/grants/grant_start.html
+++ b/src/os2datascanner/projects/admin/grants/templates/grants/grant_start.html
@@ -24,11 +24,11 @@
       </div>
 
       <p>
-        {% trans "To use this service, you must allow OS2datascanner access to its content." %}
+        {% trans "To use this service, you must allow OSdatascanner access to its content." %}
         {% if auth_endpoint %}
           {% if error %}
             <p>
-              {% trans "The service refused to grant OS2datascanner the necessary rights:" %}
+              {% trans "The service refused to grant OSdatascanner the necessary rights:" %}
               <pre class="alert alert--danger">{{ error_description }}</pre>
               <p>
                 {% trans "Click the button below to try again." %}
@@ -45,7 +45,7 @@
               </p>
               <p>{% trans "You will be forwarded to the creation form after the service has issued the necessary rights." %}</p>
             {% else %}
-              <p>{% trans "The information pointing to the OS2datascanner system for this service is missing." %}</p>
+              <p>{% trans "The information pointing to the OSdatascanner system for this service is missing." %}</p>
             {% endif %}
           </div>
         </div>
