--- a/src/os2datascanner/projects/report/reportapp/templates/components/common/support_button.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/common/support_button.html
@@ -7,7 +7,7 @@
   <ul>
     {% if request.user.is_superuser and settings.ALLOW_CONTACT_MAGENTA %}
       <a href="mailto:OS2datascannersupport@magenta.dk?subject=[{% now "y/m/d H:i:s" %}] {{ request.user.account.organization }}: {{ request.user.get_short_name }}&body={{ email_body }}">
-        <li title="{% trans "Are you experiencing issues with OS2datascanner, and have no luck resolving it by consulting the manual or FAQ? You can contact Magenta ApS by clicking this button." %}">
+        <li title="{% trans "Are you experiencing issues with OSdatascanner, and have no luck resolving it by consulting the manual or FAQ? You can contact Magenta ApS by clicking this button." %}">
           {% trans "Contact Magenta" %}
         </li>
       </a>
@@ -21,7 +21,7 @@
             <ul>
               {% for contact in dpo_contacts %}
                 {% if contact.email %}
-                  <a href="mailto:{{ contact.email }}?subject={% trans "Question about OS2datascanner" %}">
+                  <a href="mailto:{{ contact.email }}?subject={% trans "Question about OSdatascanner" %}">
  
                     {% if contact.first_name %}
                       <li>{{ contact.get_full_name }}</li>
@@ -36,7 +36,7 @@
         </div>
       </li>
     {% elif organization.dpo_contact_method == DPOContactChoices.SINGLE_DPO %}
-      <a href="mailto:{{ organization.dpo_value }}?subject={% trans "Question about OS2datascanner" %}"
+      <a href="mailto:{{ organization.dpo_value }}?subject={% trans "Question about OSdatascanner" %}"
          target="_blank">
         <li class="user-input"
             title="{% trans "Do you have a question about some of your matches or which actions you should take to handle them? You can contact one of your DPOs by clicking this button." %}">
@@ -45,24 +45,24 @@
       </a>
     {% endif %}
     {% if organization.support_contact_method == SupportContactChoices.EMAIL %}
-      <a href="mailto:{{ organization.support_value }}?subject={% trans "Issue with OS2datascanner" %}"
+      <a href="mailto:{{ organization.support_value }}?subject={% trans "Issue with OSdatascanner" %}"
          target="_blank">
         <li class="user-input"
-            title="{% trans "Are you experiencing issues with OS2datascanner, and have no luck resolving it by consulting the manual or FAQ? You can contact your IT department by clicking this button." %}">
+            title="{% trans "Are you experiencing issues with OSdatascanner, and have no luck resolving it by consulting the manual or FAQ? You can contact your IT department by clicking this button." %}">
           {% trans "Contact" %} {{ organization.support_name }}
         </li>
       </a>
     {% elif organization.support_contact_method == SupportContactChoices.WEBSITE %}
       <a href="{{ organization.support_value }}" target="_blank">
         <li class="user-input"
-            title="{% trans "Are you experiencing issues with OS2datascanner, and have no luck resolving it by consulting the manual or FAQ? You can contact your IT department by clicking this button." %}">
+            title="{% trans "Are you experiencing issues with OSdatascanner, and have no luck resolving it by consulting the manual or FAQ? You can contact your IT department by clicking this button." %}">
           {% trans "Contact" %} {{ organization.support_name }}
         </li>
       </a>
     {% endif %}
     {% if request.path != "/help/" %}
       <a href="{% url "guide" %}" target="_blank">
-        <li title="{% trans "Consult the manual to find instructions for using OS2datascanner." %}">{% trans "Manual" %}</li>
+        <li title="{% trans "Consult the manual to find instructions for using OSdatascanner." %}">{% trans "Manual" %}</li>
       </a>
     {% endif %}
     <a href="{% url "guide" %}#FAQ" target="_blank">
