--- a/src/os2datascanner/projects/report/reportapp/templates/components/reports/handle_match.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/reports/handle_match.html
@@ -7,7 +7,7 @@
             type="button"
             disabled
             id="mass_handle_button"
-            title="{% blocktrans %}OS2datascanner will not delete results from the system that was scanned. Marking a result as handled will only remove the result from OS2datascanner.{% endblocktrans %}">
+            title="{% blocktrans %}OSdatascanner will not delete results from the system that was scanned. Marking a result as handled will only remove the result from OSdatascanner.{% endblocktrans %}">
       <i class="material-icons text-secondary" aria-hidden="true">archive</i> <span>{% trans "Mark as handled" %}</span>
     </button>
     <div class="dropdown-container">
@@ -40,7 +40,7 @@
             class="button table-checkbox__action button--has-icon"
             data-status="match-handle"
             disabled
-            title="{% blocktrans %}OS2datascanner will not delete results from the system that was scanned. Marking a result as handled will only remove the result from OS2datascanner.{% endblocktrans %}"
+            title="{% blocktrans %}OSdatascanner will not delete results from the system that was scanned. Marking a result as handled will only remove the result from OSdatascanner.{% endblocktrans %}"
             hx-post="{% url "mass-handle" %}"
             hx-swap="none"
             hx-trigger="click"
@@ -67,7 +67,7 @@
             hx-swap="none"
             hx-trigger="click"
             hx-push-url="false"
-            hx-confirm="{% blocktrans %}You are about to delete checked mails from your mailbox. OS2datascanner cannot reverse this action. Are you sure?{% endblocktrans %}"
+            hx-confirm="{% blocktrans %}You are about to delete checked mails from your mailbox. OSdatascanner cannot reverse this action. Are you sure?{% endblocktrans %}"
             name="mass-delete">
       <i class="material-icons">delete_forever</i>
       {% trans "Delete marked emails" %}
