--- a/src/os2datascanner/projects/report/reportapp/templates/components/reports/match.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/reports/match.html
@@ -60,7 +60,7 @@
                           hx-swap="none"
                           hx-trigger="click"
                           hx-indicator="closest tr"
-                          hx-confirm="{% blocktrans %}You are about to delete selected email from your mailbox. OS2datascanner cannot reverse this action. Are you sure?{% endblocktrans %}">
+                          hx-confirm="{% blocktrans %}You are about to delete selected email from your mailbox. OSdatascanner cannot reverse this action. Are you sure?{% endblocktrans %}">
                     {% trans "Delete" %}
                   </button>
                 </span>
@@ -131,7 +131,7 @@
           {% if settings.HANDLE_DROPDOWN %}
             <button class="matches-handle expand button button--has-icon"
                     type="button"
-                    title="{% blocktrans %}OS2datascanner will not delete results from the system that was scanned. Marking a result as handled will only remove the result from OS2datascanner.{% endblocktrans %}">
+                    title="{% blocktrans %}OSdatascanner will not delete results from the system that was scanned. Marking a result as handled will only remove the result from OSdatascanner.{% endblocktrans %}">
               <i class="material-icons text-secondary" aria-hidden="true">archive</i> <span>{% trans "Handle" %}</span>
             </button>
             <div class="dropdown-container">
@@ -173,7 +173,7 @@
             {% else %}
               <button class="matches-handle button button--has-icon"
                       type="button"
-                      title="{% blocktrans %}OS2datascanner will not delete results from the system that was scanned. Marking a result as handled will only remove the result from OS2datascanner.{% endblocktrans %}"
+                      title="{% blocktrans %}OSdatascanner will not delete results from the system that was scanned. Marking a result as handled will only remove the result from OSdatascanner.{% endblocktrans %}"
                       hx-post="{% url "handle-match" document_report.pk|unlocalize %}"
                       hx-swap="outerHTML swap:300ms"
                       hx-target="closest tr"
@@ -224,7 +224,7 @@
         <td colspan="{% if "/archive" in request.path %}6{% else %}5{% endif %}">
           <i>{% translate "A temporary error occurred during the latest check of this match" %}</i>
           <br>
-          <small>{% translate "OS2datascanner will automatically check this match again as part of the next scan" %}</small>
+          <small>{% translate "OSdatascanner will automatically check this match again as part of the next scan" %}</small>
         </td>
         <td class="datatable__column--actions">
           <div class="button-group text-align-right">
