[#58950] Add todo-comment for future breaking change

--- a/src/os2datascanner/projects/report/reportapp/templates/manual.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/manual.html
@@ -178,13 +178,13 @@
       {% if categorization %}
         <h2 id="categorize">Kategorisering i Outlook</h2>
         <p>
-          Du har mulighed for at markere de mails, som der er fundet matches i, i din Outlook klient via OSdatascanner. For at slå denne indstilling til skal du tilgå din <a href="{% url "account-me" %}">profilside</a>, og sætte et flueben i indstillingen "Kategorisér emails". Fremtidige scanninger vil herefter automatisk tilføje kategorien "OSdatascanner match" til mails, hvori der findes matches.
+          Du har mulighed for at markere de mails, som der er fundet matches i, i din Outlook klient via OSdatascanner. For at slå denne indstilling til skal du tilgå din <a href="{% url "account-me" %}">profilside</a>, og sætte et flueben i indstillingen "Kategorisér emails". Fremtidige scanninger vil herefter automatisk tilføje kategorien "OS2datascanner match" til mails, hvori der findes matches.
         </p>
         <p>
           Når indstillingen er slået til har du også mulighed for at kategorisere alle mails med tidligere fundne resultater, ved at trykke på knappen "Kategorisér".
         </p>
         <p>
-          Aktivering af kategorisering tilføjer også kategorien "OSdatascanner false positive" til Outlook. Sættes denne kategori på en mail, vil mailen fremover ikke optræde som et match i OSdatascanner.
+          Aktivering af kategorisering tilføjer også kategorien "OS2datascanner false positive" til Outlook. Sættes denne kategori på en mail, vil mailen fremover ikke optræde som et match i OSdatascanner.
         </p>
       {% endif %}
 
