--- a/src/os2datascanner/projects/admin/organizations/templates/organizations/orgunit_list.html
+++ b/src/os2datascanner/projects/admin/organizations/templates/organizations/orgunit_list.html
@@ -24,156 +24,204 @@
       <form name="orgunit_filters"
             id="orgunit_filters"
             class="orgunit_filtering_wrapper"
-            onsubmit="return false"
             hx-get="{% url "orgunit-list" organization.slug %}"
-            hx-trigger="change, keyup delay:200ms from:#search_field"
+            hx-trigger="keyup delay:200ms from:#search_field"
             hx-swap="outerHTML"
             hx-select=".orgunit-list"
             hx-target=".orgunit-list"
             hx-include="[id='dropdown_options']"
             hx-indicator="#orgunit-page-indicator">
-        <div class="orgunit_input_wrapper search_field_wrapper">
-          <input type="search"
-                 name="search_field"
-                 id="search_field"
-                 placeholder="{% trans "Search for organizational unit" %}"
-                 value="{{ request.GET.search_field }}"
-                 autocomplete="off" />
-        </div>
-        <div class="orgunit_input_wrapper">
-          <input type="checkbox"
-                 name="show_empty"
-                 id="show_empty"
-                 value="on"
-                 autocomplete="off"
-                 {% if show_empty %}checked{% endif %} />
-          <label for="show_empty">{% trans "Show empty units" %}</label>
-        </div>
-      </form>
-    {% endif %}
-  </div>
-  {% if FEATURES.ORG_STRUCTURE in organization.client.enabled_features %}
-    <div class="datatable-wrapper card orgunit-list"
-         role="region"
-         tabindex="0"
-         aria-label="{% trans 'organizational units'|capfirst %}"
-         hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
-         hx-indicator="#orgunit-page-indicator"
-         hx-push-url='true'>
-      <table class="datatable">
-        <colgroup>
-          <col class="datatable__column--name">
-          <col class="datatable__column--info">
-          <col class="datatable__column--managers">
-          <col class="datatable__column--dpos">
-        </colgroup>
-        <thead>
-          <tr class="table-topbar topbar-stick sticky">
-            <th class="datatable__column--name">{% trans "name"|capfirst %}</th>
-            <th class="datatable__column--info">{% trans "accounts"|capfirst %}</th>
-            <th class="datatable__column--managers">{% trans "managers"|capfirst %}</th>
-            <th class="datatable__column--dpos">{% trans "DPOs" %}</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% if object_list.exists %}
-            {% for orgunit in object_list %}
-              <tr id="orgunit__{{ orgunit.pk }}">
-                <td class="datatable__column--name orgunit_name">
-                  <div>{{ orgunit.name }}</div>
-                  {% if orgunit.parent %}<div class="parent">({{ orgunit.parent.name }})</div>{% endif %}
-                </td>
-                <td class="datatable__column--info orgunit_members">
-                  {{ orgunit.associated_accounts }} {% trans "accounts associated." %}
-                </td>
-                <td class="datatable__column--managers orgunit_managers">
+        <div class="orgunit_input_container">
+          <div class="orgunit_input_wrapper search_field_wrapper">
+            <input type="search"
+                   name="search_field"
+                   id="search_field"
+                   placeholder="{% trans "Search for organizational unit" %}"
+                   value="{{ request.GET.search_field }}"
+                   autocomplete="off" />
+          </div>
+          <div class="org_unit_filter_button">
+            <button class="filter-button expand"
+                    type="button"
+                    onclick="toggleOptionbox()">
+              <span>{% trans "filter"|capfirst %}</span>
+              <svg class="icon">
+                <use xlink:href="/static/svg/symbol-defs.svg#icon-funnel"></use>
+              </svg>
+            </button>
+            <div id="org_structure_filter_options"
+                 class="filter-container"
+                 style="display: none">
+              <div class="filter-container-options">
+                {% comment %}
+                Added hidden value, to show all roles the first time the user visits the page, despite all unchecked boxes
+                {% endcomment %}
+                <input type="hidden" name="roles" value="_" />
+                <ul>
+                  <div class="filter_header">{% trans "Show organizational units:" %}</div>
+                </ul>
+                {% for role in roles %}
                   <ul>
-                    {% for manager_pos in orgunit.managers %}
-                      <li class="dynamic_li"
-                          title="{% trans "Click to remove" %} {{ manager_pos.account.get_full_name }} {% trans "as manager of" %} {{ orgunit }}."
-                          hx-post=""
-                          hx-swap="outerHTML"
-                          hx-target="#orgunit__{{ orgunit.pk }}"
-                          hx-select="#orgunit__{{ orgunit.pk }}"
-                          hx-trigger="click"
-                          hx-vals='{"orgunit": "{{ orgunit.pk }}", "rem-manager": "{{ manager_pos.account.uuid }}"}'
-                          hx-confirm="{% trans "Are you sure you want to remove" %} {{ manager_pos.account.get_full_name }} {% trans "as manager of" %} {{ orgunit }}?">
-                        <!-- Turning djlint off here, as it will otherwise insert unwanted whitespace -->
-                        <!-- djlint:off -->{{ manager_pos.account.get_full_name }}</li><!-- djlint:on -->
-                      {% endfor %}
-                      <li class="add_manager">
-                        <button type="button" class="add_button button button--small">
-                          <svg class="icon">
-                            <use xlink:href="/static/svg/symbol-defs.svg#icon-plus"></use>
-                          </svg>
-                        </button>
-                        <select class="select_options"
-                                name="add-manager"
-                                hidden
-                                hx-post=""
-                                hx-swap="outerHTML"
-                                hx-target="#orgunit__{{ orgunit.pk }}"
-                                hx-select="#orgunit__{{ orgunit.pk }}"
-                                hx-trigger="change"
-                                hx-vals='{"orgunit": "{{ orgunit.pk }}"}'>
-                          <option value="">{% trans "Choose new manager" %}</option>
-                          {% for account in accounts %}<option value="{{ account.uuid }}">{{ account.get_full_name }}</option>{% endfor %}
-                        </select>
-                      </li>
-
+                    <div class="filter_checkbox">
+                      <input value="{{ role.0 }}"
+                             name="roles"
+                             type="checkbox"
+                             id="{{ role.0 }}_checkbox"
+                             {% if role.0 in checked_roles %}checked{% endif %}
+                             autocomplete="off">
+                      <label for="{{ role.0 }}_checkbox">{% trans "with "|capfirst %}{{ role.1 }}</label>
+                      <button class="checkbox_button"
+                              id="{{ role.0 }}_checkbox_button"
+                              onclick="toggleCheckbox(event, '{{ role.0 }}_checkbox')">
+                      </div>
                     </ul>
-                  </td>
-
-                  <td class="datatable__column--dpos orgunit_managers">
+                  {% endfor %}
+                  <ul>
+                    <div class="filter_checkbox">
+                      <input type="checkbox"
+                             name="show_empty"
+                             id="show_empty"
+                             value="on"
+                             autocomplete="off"
+                             {% if show_empty %}checked{% endif %}>
+                      <label for="show_empty">{% trans "Show empty units" %}</label>
+                      <button class="checkbox_button"
+                              id="show_empty_checkbox_button"
+                              onclick="toggleCheckbox(event, 'show_empty')">
+                      </div>
+                    </ul>
                     <ul>
-                      {% for dpo_pos in orgunit.dpos %}
-                        <li class="dynamic_li"
-                            title="{% trans "Click to remove" %} {{ dpo_pos.account.get_full_name }} {% trans "as manager of" %} {{ orgunit }}."
-                            hx-post=""
-                            hx-swap="outerHTML"
-                            hx-target="#orgunit__{{ orgunit.pk }}"
-                            hx-select="#orgunit__{{ orgunit.pk }}"
-                            hx-trigger="click"
-                            hx-vals='{"orgunit": "{{ orgunit.pk }}", "rem-dpo": "{{ dpo_pos.account.uuid }}"}'
-                            hx-confirm="{% trans "Are you sure you want to remove" %} {{ dpo_pos.account.get_full_name }} {% trans "as DPO of" %} {{ orgunit }}?">
-                          <!-- Turning djlint off here, as it will otherwise insert unwanted whitespace -->
-                          <!-- djlint:off -->{{ dpo_pos.account.get_full_name }}</li><!-- djlint:on -->
-                        </li>
-                      {% endfor %}
-                      <li class="add_dpo">
-                        <button type="button" class="add_button button button--small">
-                          <svg class="icon">
-                            <use xlink:href="/static/svg/symbol-defs.svg#icon-plus"></use>
-                          </svg>
-                        </button>
-                        <select class="select_options"
-                                name="add-dpo"
-                                hidden
+                      <button type="submit" class="button--cta button">{% trans "filter"|capfirst %}</button>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </form>
+        {% endif %}
+      </div>
+      {% if FEATURES.ORG_STRUCTURE in organization.client.enabled_features %}
+        <div class="datatable-wrapper card orgunit-list"
+             role="region"
+             tabindex="0"
+             aria-label="{% trans 'organizational units'|capfirst %}"
+             hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
+             hx-indicator="#orgunit-page-indicator"
+             hx-push-url='true'>
+          <table class="datatable">
+            <colgroup>
+              <col class="datatable__column--name">
+              <col class="datatable__column--info">
+              <col class="datatable__column--managers">
+              <col class="datatable__column--dpos">
+            </colgroup>
+            <thead>
+              <tr class="table-topbar topbar-stick sticky">
+                <th class="datatable__column--name">{% trans "name"|capfirst %}</th>
+                <th class="datatable__column--info">{% trans "accounts"|capfirst %}</th>
+                <th class="datatable__column--managers">{% trans "managers"|capfirst %}</th>
+                <th class="datatable__column--dpos">{% trans "DPOs" %}</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% if object_list.exists %}
+                {% for orgunit in object_list %}
+                  <tr id="orgunit__{{ orgunit.pk }}">
+                    <td class="datatable__column--name orgunit_name">
+                      <div>{{ orgunit.name }}</div>
+                      {% if orgunit.parent %}<div class="parent">({{ orgunit.parent.name }})</div>{% endif %}
+                    </td>
+                    <td class="datatable__column--info orgunit_members">
+                      {{ orgunit.associated_accounts }} {% trans "accounts associated." %}
+                    </td>
+                    <td class="datatable__column--managers orgunit_managers">
+                      <ul>
+                        {% for manager_pos in orgunit.managers %}
+                          <li class="dynamic_li"
+                              title="{% trans "Click to remove" %} {{ manager_pos.account.get_full_name }} {% trans "as manager of" %} {{ orgunit }}."
+                              hx-post=""
+                              hx-swap="outerHTML"
+                              hx-target="#orgunit__{{ orgunit.pk }}"
+                              hx-select="#orgunit__{{ orgunit.pk }}"
+                              hx-trigger="click"
+                              hx-vals='{"orgunit": "{{ orgunit.pk }}", "rem-manager": "{{ manager_pos.account.uuid }}"}'
+                              hx-confirm="{% trans "Are you sure you want to remove" %} {{ manager_pos.account.get_full_name }} {% trans "as manager of" %} {{ orgunit }}?">
+                            <!-- Turning djlint off here, as it will otherwise insert unwanted whitespace -->
+                            <!-- djlint:off -->{{ manager_pos.account.get_full_name }}</li><!-- djlint:on -->
+                          {% endfor %}
+                          <li class="add_manager">
+                            <button type="button" class="add_button button button--small">
+                              <svg class="icon">
+                                <use xlink:href="/static/svg/symbol-defs.svg#icon-plus"></use>
+                              </svg>
+                            </button>
+                            <select class="select_options"
+                                    name="add-manager"
+                                    hidden
+                                    hx-post=""
+                                    hx-swap="outerHTML"
+                                    hx-target="#orgunit__{{ orgunit.pk }}"
+                                    hx-select="#orgunit__{{ orgunit.pk }}"
+                                    hx-trigger="change"
+                                    hx-vals='{"orgunit": "{{ orgunit.pk }}"}'>
+                              <option value="">{% trans "Choose new manager" %}</option>
+                              {% for account in accounts %}<option value="{{ account.uuid }}">{{ account.get_full_name }}</option>{% endfor %}
+                            </select>
+                          </li>
+
+                        </ul>
+                      </td>
+
+                      <td class="datatable__column--dpos orgunit_managers">
+                        <ul>
+                          {% for dpo_pos in orgunit.dpos %}
+                            <li class="manager_li"
+                                title="{% trans "Click to remove" %} {{ dpo_pos.account.get_full_name }} {% trans "as manager of" %} {{ orgunit }}."
                                 hx-post=""
                                 hx-swap="outerHTML"
                                 hx-target="#orgunit__{{ orgunit.pk }}"
                                 hx-select="#orgunit__{{ orgunit.pk }}"
-                                hx-trigger="change"
-                                hx-vals='{"orgunit": "{{ orgunit.pk }}"}'>
-                          <option value="">{% trans "Choose new DPO" %}</option>
-                          {% for account in accounts %}<option value="{{ account.uuid }}">{{ account.get_full_name }}</option>{% endfor %}
-                        </select>
-                      </li>
+                                hx-trigger="click"
+                                hx-vals='{"orgunit": "{{ orgunit.pk }}", "rem-dpo": "{{ dpo_pos.account.uuid }}"}'
+                                hx-confirm="{% trans "Are you sure you want to remove" %} {{ dpo_pos.account.get_full_name }} {% trans "as DPO of" %} {{ orgunit }}?">
+                              <!-- Turning djlint off here, as it will otherwise insert unwanted whitespace -->
+                              <!-- djlint:off -->{{ dpo_pos.account.get_full_name }}</li><!-- djlint:on -->
+                            </li>
+                          {% endfor %}
+                          <li class="add_dpo">
+                            <button type="button" class="add_manager_button button button--small">
+                              <svg class="icon">
+                                <use xlink:href="/static/svg/symbol-defs.svg#icon-plus"></use>
+                              </svg>
+                            </button>
+                            <select class="select_manager"
+                                    name="add-dpo"
+                                    hidden
+                                    hx-post=""
+                                    hx-swap="outerHTML"
+                                    hx-target="#orgunit__{{ orgunit.pk }}"
+                                    hx-select="#orgunit__{{ orgunit.pk }}"
+                                    hx-trigger="change"
+                                    hx-vals='{"orgunit": "{{ orgunit.pk }}"}'>
+                              <option value="">{% trans "Choose new DPO" %}</option>
+                              {% for account in accounts %}<option value="{{ account.uuid }}">{{ account.get_full_name }}</option>{% endfor %}
+                            </select>
+                          </li>
 
-                    </ul>
-                  </td>
-                </tr>
-              {% endfor %}
-            {% else %}
-              <tr>
-                <td class="no_units" colspan="4">{% trans "No organizational units found ..." %}</td>
-              </tr>
-            {% endif %}
-          </tbody>
-          {% include "components/pagination/pagination.html" %}
-        </table>
-      </div>
-    {% else %}
-      <div class="root">{% trans "No organizational units." %}</div>
-    {% endif %}
-  {% endblock %}
+                        </ul>
+                      </td>
+                    </tr>
+                  {% endfor %}
+                {% else %}
+                  <tr>
+                    <td class="no_units" colspan="4">{% trans "No organizational units found ..." %}</td>
+                  </tr>
+                {% endif %}
+              </tbody>
+              {% include "components/pagination/pagination.html" %}
+            </table>
+          </div>
+        {% else %}
+          <div class="root">{% trans "No organizational units." %}</div>
+        {% endif %}
+      {% endblock %}
