--- a/src/os2datascanner/projects/static/scss/components/_filters.scss
+++ b/src/os2datascanner/projects/static/scss/components/_filters.scss
@@ -65,6 +65,114 @@
   }
 }
 
+.orgunit_input_container {
+  width: 100%;
+  display: flex; 
+  justify-content: space-around; 
+  align-items: center; 
+}
+
+.orgunit_input_wrapper {
+  margin-right: 2rem;
+
+  &.dropdown {
+    margin-right: 0;
+    margin-left: auto;
+  }
+}
+
+.checkbox_button {
+  position: absolute;
+  opacity: 0;
+  width: 15rem;
+  height: 100%;
+  cursor: pointer;
+  top: 1px;
+  left: 0;
+}
+
+.filter_checkbox {
+  input[type="checkbox"] {
+    opacity: 0;
+    position: absolute;
+    z-index: -1;
+  }
+
+  input+label {
+    cursor: pointer;
+    padding-left: 1.75em;
+    margin-top: 0;
+  }
+
+  input[type="checkbox"]+label {
+
+    &::before,
+    &::after {
+      :root {
+        --transition-property: opacity;
+      }
+
+      content: "";
+      display: block;
+      height: 1em;
+      width: 1em;
+      position: absolute;
+      top: 0;
+      left: 0;
+      box-sizing: content-box;
+      background-color: transparent;
+      cursor: pointer;
+      transition: var(--transition-default);
+    }
+
+    &::before {
+      border: 2px solid rgba(0, 0, 0, 0.4);
+      border-radius: 3px;
+    }
+
+    &::after {
+      background-size: 90% auto;
+      background-position: center;
+      background-repeat: no-repeat;
+      border: 2px solid transparent; // match alignment of ::before element
+      background-image: url("../svg/done.svg");
+      opacity: 0;
+      transition: var(--transition-default);
+    }
+  }
+
+  input[type=checkbox]:focus+label::before {
+    border-color: #12496e;
+  }
+
+  &:hover {
+    input[type="checkbox"]+label {
+      &::before {
+        border-color: #12496e;
+      }
+    }
+  }
+
+  input[type="checkbox"]:checked+label {
+    &::before {
+      background-color: #12496e;
+      border-color: transparent;
+    }
+
+    &::after {
+      opacity: 1;
+    }
+  }
+
+  input[type="checkbox"]:disabled+label {
+    opacity: 0.5;
+
+    &::before {
+      border: 2px solid rgba(0, 0, 0, 0.1);
+    }
+  }
+}
+
 .errorlog_filtering_wrapper {
   display: flex;
   align-items: center;
