--- a/src/os2datascanner/projects/static/scss/components/_options.scss
+++ b/src/os2datascanner/projects/static/scss/components/_options.scss
@@ -106,6 +106,76 @@ label+.dropdown {
   }
 }
 
+.org_unit_filter_button {
+  position: relative;
+  margin-right: auto;
+}
+
+.filter-button {
+  height: 2.7rem;
+
+  padding-left: 0.8rem;
+  padding-right: 0.8rem;
+
+  background-color: var(--color-white);
+  border-width: 1px;
+  border-style: solid;
+  border-color: var(--color-dropdown);
+  border-radius: 0;
+  font-family: inherit;
+  font-weight: normal;
+  font-size: 1rem;
+  cursor: pointer;
+
+  svg {
+    top: 0.15rem;
+  }
+}
+
+.filter-container {
+  display: none;
+  position: absolute;
+  top: 3rem;
+  z-index: 100;
+  right: 0.01rem;
+
+  // Apply this to make z-index work on iPad OS
+  transform: translate3d(0, 0, 0);
+  -webkit-transform: translate3d(0, 0, 0);
+}
+
+.filter-container-options {
+  position: relative;
+  width: 20rem;
+  z-index: 100;
+  padding: 0.5rem;
+  border-radius: var(--border-radius-default);
+  background-color: var(--color-widget-bg);
+  box-shadow: var(--box-shadow-widget);
+
+  .filter_header {
+    font-weight: bold;
+  }
+
+  ul {
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    margin: 1rem auto;
+  }
+
+  ul>li {
+    width: 100%;
+    text-align: center;
+    font-weight: normal;
+  }
+
+  &:active {
+    display: block;
+  }
+}
+
 .matches-handle,
 .revert-handle {
 
