[#58870] Added new scrollable class for the datatable-wrapper HTML class, removed overflow by default

--- a/src/os2datascanner/projects/admin/adminapp/templates/miniscan.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/miniscan.html
@@ -94,7 +94,7 @@
        aria-hidden="true"
        data-modal="modal:close">
     <h1>{% trans "Upload a rule from the list" %}</h1>
-    <div class="datatable-wrapper">
+    <div class="datatable-wrapper scrollable">
       <table class="datatable">
         {% for rule in customrule_list %}
           <tr id="ruleRow"
