[#58363] Allow uploading image for use in Report module emails

--- a/src/os2datascanner/projects/admin/organizations/templates/organizations/org_add.html
+++ b/src/os2datascanner/projects/admin/organizations/templates/organizations/org_add.html
@@ -13,7 +13,7 @@
     <h1>{% trans 'add organization'|capfirst %}</h1>
   </div>
 
-  <form class="form" role="form" method="post">
+  <form class="form" role="form" method="post" enctype='multipart/form-data'>
     {% csrf_token %}
     <section class="data-form">
       <fieldset class="form__fieldset">
