--- a/src/os2datascanner/projects/report/reportapp/templates/mail/overview.da.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/mail/overview.da.html
@@ -19,7 +19,7 @@
   <body>
     {% if image_name %}
       <p>
-        <img src="{{ image_name }}">
+        <img src="cid:{{ image_name }}" alt="">
       </p>
     {% endif %}
 
