[#58766] Make unhandled results figure a line graph

--- a/src/os2datascanner/projects/report/reportapp/templates/components/statistics/dpo_statistics_template.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/statistics/dpo_statistics_template.html
@@ -231,7 +231,7 @@
   </div> {% endcomment %}
 
   <div class="statistic_wrapper">
-    <!-- bar chart - new and unhandled matches -->
+    <!-- line and bar chart - new and unhandled matches -->
     <div class="statistic data_box large">
       <div class="statistic_header">
         <div>
@@ -248,7 +248,6 @@
             </button>
             <div class="dropdown-container">
               <div class="graph-zoom-info-dropdown">
-                {{ linebreaks }}
                 {% trans "Hold and drag your mouse to zoom in on part of the graph. Hold shift while using the mouse wheel to manually zoom. Use the reset button to return the graph to normal." %}
 
               </div>
@@ -268,8 +267,7 @@
         </div>
       </div>
       <div class="chart_container" data-chartid="development-unhandled-results">
-        <canvas class="bar_chart canvas_size bar_chart_vertical"
-                id="bar_chart_unhandled_matches"></canvas>
+        <canvas class="line_chart canvas_size" id="line_chart_unhandled_matches"></canvas>
       </div>
       <div class="hidden chart_container "
            data-chartid="development-new-results">
