--- a/src/os2datascanner/projects/static/scss/components/_statistics.scss
+++ b/src/os2datascanner/projects/static/scss/components/_statistics.scss
@@ -300,6 +300,9 @@
 	&.bar_chart_horizontal {
 		height: 40rem;
 	}
+	&.line_chart {
+		height: 45rem;
+	}
 }
 
 .chart_container {
@@ -310,10 +313,6 @@
 	&.status-timeline {
 		max-width: 100%;
 		max-height: 100%;
-	}
-
-	canvas.line_chart {
-		height: 256px;
 	}
 
 	// use the approach below to visually hide charts from the screen.
